// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toggle button should call handletoggle with argument "startRec" when clicked and recStatus is "off" 1`] = `
<Fragment>
  <button
    className="button"
    onClick={[Function]}
  >
    Start Recording
  </button>
</Fragment>
`;

exports[`toggle button should render correct text when rec status is done 1`] = `
<Fragment>
  <button
    className="button"
    onClick={[Function]}
  >
    Reset Recording
  </button>
</Fragment>
`;

exports[`toggle button should render correct text when rec status is on 1`] = `
<Fragment>
  <button
    className="button"
    onClick={[Function]}
  >
    Stop Recording
  </button>
</Fragment>
`;
